--- a/Views/Composition/Edit.cshtml
+++ b/Views/Composition/Edit.cshtml
@@ -30,11 +30,21 @@ else
                 </div>
                 <div class="form-group" align="center">
                     <a href="javascript:history.go(-1)" type="button" class="btn btn-secondary" onclick="return confirm('you sure? :)');">Cancel</a>
-                    <script>
+                    @* <script>
                         document.write('<button type="submit" name="returnUrl" value="'+ document.referrer + '" class="btn btn-primary">Save</button>');
-                    </script>
+                    </script> *@
+                    <input type="submit" value="Save" class="btn btn-primary" 
+                            asp-route-id="@ViewContext.RouteData.Values["id"]"
+                            asp-route-returnUrl="@ViewContext.RouteData.Values["returnUrl"]">
                 </div>
             </form>
         </div>
     </div>
+
+    <form  asp-controller="Composition" asp-action="DeleteComp"
+        asp-route-id="@ViewContext.RouteData.Values["id"]"
+        asp-route-returnUrl="">
+        <button  type="submit" class="btn btn-danger">Delete</button>
+    </form>
+
 }
