--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿@using static coursework_itransition.Utils;
+@using Microsoft.EntityFrameworkCore;
 
 @model coursework_itransition.Controllers.HomeController;
 
@@ -16,46 +17,52 @@
             <thead>
                 <tr>
                     <th>Title</th>
-                    <th>AuthorID</th>
+                    <th>Author</th>
                     <th>LastEditDT</th>
                     <th></th>
                 </tr>
             </thead>
-            @foreach (var composition in Model._context.Compositions)
+            @foreach (var composition in Model._context.Compositions.Include(comp=>comp.Author).Include(comp=>comp.Chapters))
             {
-                <tr>
-                    <td><p>@composition.Title</p></td>
-                    <td><p>@composition.AuthorID</p></td>
-                    <td><p>@composition.LastEditDT</p></td> 
-                    <td>
-                        <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#model-@composition.ID" >
-                            <i class="fa fa-eye"></i>
-                        </button>
-                        @if(UserIsAuthor(User, composition))
-                        {  
-                            <a asp-controller="Composition" asp-action="Edit" asp-route-id="@composition.ID" asp-route-returnUrl="@Url.ActionLink()" type="button" class="btn btn-dark">
-                                <i class="fa fa-edit"></i>
-                            </a>
-                        }
-                        <div class="modal fade" id="model-@composition.ID" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
-                          <div class="modal-dialog" role="document">
-                            <div class="modal-content">
-                              <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLongTitle">@composition.Title</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                  <span aria-hidden="true">&times;</span>
-                                </button>
-                              </div>
-                              <div class="modal-body">
-                                @composition.Summary
-                              </div>
-                              <div class="modal-footer">
-                              </div>
+              <tr>
+                  <td><p>@composition.Title</p></td>
+                  <td><p>@composition.Author.Name</p></td>
+                  <td><p>@composition.LastEditDT</p></td> 
+                  <td>
+                      <button type="button" class="btn btn-dark" data-toggle="modal" data-target="#model-@composition.ID" >
+                          <i class="fa fa-eye"></i>
+                      </button>
+                      @if(UserIsAuthor(User, composition))
+                      {  
+                          <a asp-controller="Composition" asp-action="Edit" asp-route-id="@composition.ID" asp-route-returnUrl="@Url.ActionLink()" type="button" class="btn btn-dark">
+                              <i class="fa fa-edit"></i>
+                          </a>
+                      }
+                      <div class="modal fade" id="model-@composition.ID" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                          <div class="modal-content">
+                            <div class="modal-header">
+                              <h5 class="modal-title" id="exampleModalLongTitle">@composition.Title</h5>
+                              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                              </button>
+                            </div>
+                            <div class="modal-body">
+                              @composition.Summary
+                              @{int i = 1;}
+                              @foreach (var chapter in composition.Chapters)
+                              {
+                                  <div>@i. @chapter.Title</div>
+                                  ++i;
+                              }
+                            </div>
+                            <div class="modal-footer">
                             </div>
                           </div>
                         </div>
+                      </div>
                     </td>
-                </tr>
-            }
+              </tr>
+            }     
         </table>    
 </div>
