--- a/Views/Composition/Edit.cshtml
+++ b/Views/Composition/Edit.cshtml
@@ -31,7 +31,7 @@
 
         <div class="form-group" align="center">
             <button id="btn-delete" class="mr-2 ml-2 btn btn-danger" disabled>Delete</button>
-            <button id="btn-back" class="mr-2 ml-2 btn btn-primary" onclick="history.go(-1)">Back</button>
+            <button id="btn-back" class="mr-2 ml-2 btn btn-primary">Back</button>
             <button id="btn-save" class="mr-2 ml-2 btn btn-success" disabled>Save</button>
         </div>
     </div>
