--- a/Views/Composition/Edit.cshtml
+++ b/Views/Composition/Edit.cshtml
@@ -34,6 +34,10 @@
             <button id="btn-back" class="mr-2 ml-2 btn btn-primary">Back</button>
             <button id="btn-save" class="mr-2 ml-2 btn btn-success" disabled>Save</button>
         </div>
+
+        <div class="form-group" align="center">
+            <div class="alert fade"></div>
+        </div>
     </div>
 </div>
 
