--- a/Views/Composition/Edit.cshtml
+++ b/Views/Composition/Edit.cshtml
@@ -19,20 +19,19 @@
             <textarea id="textarea-summary" class="form-control" class="form-control" rows="10"></textarea>
         </div>
 
-        <div class="table-responsive table-hover">
-            <table class="table">
-                <tbody id="tbody-chapters"></tbody>
-            </table>
-        </div>
-
-        <div class="form-group" align="center">
-            <button id="btn-add-chapter" class="btn btn-secondary" type="button" disabled>Add chapter</button>
-        </div>
-
         <div class="form-group" align="center">
             <button id="btn-delete" class="mr-2 ml-2 btn btn-danger" disabled>Delete</button>
             <button id="btn-back" class="mr-2 ml-2 btn btn-primary">Back</button>
             <button id="btn-save" class="mr-2 ml-2 btn btn-success" disabled>Save</button>
+        </div>
+
+        <ul id="sortable" class="list-group list-unstyled custom-fixed">
+            
+        </ul>
+
+        <br>
+        <div class="form-group" align="center">
+            <button id="btn-add-chapter" class="btn btn-secondary" type="button" disabled>Add chapter</button>
         </div>
 
         <div class="form-group" align="center">
@@ -42,3 +41,18 @@
 </div>
 
 <script type="module" src="~/js/Composition/Edit.js"></script>
+
+<style>
+    li.custom-fixed{
+        overflow: hidden; 
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        width: 100%;
+    }
+    
+
+    ul.custom-fixed{ 
+        table-layout: fixed; 
+        width: 100%;
+    }
+</style>
