--- a/Views/Composition/Edit.cshtml
+++ b/Views/Composition/Edit.cshtml
@@ -25,17 +25,15 @@
             <button id="btn-save" class="mr-2 ml-2 btn btn-success" disabled>Save</button>
         </div>
 
-        <ul id="sortable" class="list-group list-unstyled custom-fixed">
-            
-        </ul>
+        <div class="form-group" align="center">
+            <div class="alert fade"></div>
+        </div>
+
+        <ul id="sortable" class="list-group list-unstyled custom-fixed"></ul>
 
         <br>
         <div class="form-group" align="center">
             <button id="btn-add-chapter" class="btn btn-secondary" type="button" disabled>Add chapter</button>
-        </div>
-
-        <div class="form-group" align="center">
-            <div class="alert fade"></div>
         </div>
     </div>
 </div>
